@@ -9,6 +9,7 @@ ENH: Ticket#446 - Added TMetaTagCollection.getMetaTagByID method (Qiang)
 CHG: Ticket#437 - __autoload is replaced by spl_autoload_register (Qiang)
 CHG: Ticket#454 - Redundant PHP Version Check (Qiang)
 CHG: Ticket#460 - Validators will not perform validation if parents are disabled (Qiang)
+CHG: TDataGrid now does not set default table styles (Qiang)
 CHG: TRepeater does not render <span> anymore for empty item template (Qiang)
 CHG: THttpRequest.constructUrl() now encodes ampersand by default (Qiang)
 
